# sprig

./: CMakeLists.txt  Change Log.txt  Known Problems.txt  Makefile  Makefile.conf  ProjectHome.md  README.txt  SPG_misc.c  SPG_polygon.c  SPG_primitives.c  SPG_rotation.c  SPG_surface.c  sprig.h  sprig_common.h  sprig_inline.h
docs/: Arguments.html  Control.html  Credits.html  Defines.html  Dirty Rects.html  Drawing.html  Extended.html  Misc.html  Palette.html  Polygon.html  Primitives.html  Surface.html  Transform.html  Types.html  index.html
examples/: CMakeLists.txt
examples/scale/: main.c
source/: CMakeLists.txt  SPG_extended.c  SPG_polygon.c  SPG_rotation.c  sprig.h
